--- a/README.html
+++ b/README.html
@@ -31,7 +31,7 @@
 <li>📫 How to reach me: <a href="mailto:Rohits8853@gmail.com">Rohits8853@gmail.com</a></li>
 <li>⚡ Fun fact: Comedian 😄</li>
 </ul>
-<p><a href="https://sha_since1999.com"><img src="https://img.shields.io/website?label=Rohitsahu.me&amp;style=for-the-badge&amp;url=https%3A%2F%252sha-since1999.github.io" alt="Website"></a></p>
+<p><a href="https://sha_since1999.com"><img src="https://img.shields.io/website?label=Rohitsahu.me&amp;style=for-the-badge&amp;url=https%3A%2F%252google.com" alt="Website"></a></p>
 <h3 id="connect-with-me">Connect with me:</h3>
 <p><a href="https://sha_since1999.github.io"><img align="left" alt="codeSTACKr.com" width="22px" src="https://raw.githubusercontent.com/iconic/open-iconic/master/svg/globe.svg" /></a><br>
 <a href="https://twitter.com/sha_since1999"><img align="left" alt="codeSTACKr | Twitter" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" /></a><br>
@@ -39,10 +39,14 @@
 <a href="https://instagram.com/sha_since1999"><img align="left" alt="codeSTACKr | Instagram" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/instagram.svg" /></a></p>
 <br />
 <h3 id="languages-and-tools">Languages and Tools:</h3>
+<img align="left" alt="Visual Studio Code" width="26px" src="https://raw.githubusercontent.com/github/explore/fbceb94436312b6dacde68d122a5b9c7d11f9524/topics/aws/aws.png" />
+<img align="left" alt="Visual Studio Code" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/swift/swift.png" />
+<img align="left" alt="Visual Studio Code" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/ios/ios.png" />
+<img align="left" alt="Visual Studio Code" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/cpp/cpp.png" />
 <img align="left" alt="Visual Studio Code" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" />
 <img align="left" alt="HTML5" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" /> 
 <img align="left" alt="CSS3" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" />
-<img align="left" alt="Sass" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/sass/sass.png" />
+<img align="left" alt="Sass" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/bootstrap/bootstrap.png" />
 <img align="left" alt="SQL" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/sql/sql.png" />
 <img align="left" alt="MySQL" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mysql/mysql.png" /> 
 <img align="left" alt="Git" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png" />
@@ -54,7 +58,6 @@
 <figure><embed src="https://wakatime.com/share/@789a23a6-2f02-4e89-9601-fa2b5afb0c6b/78a10246-8b0c-48ed-8394-4ea9e31deb7f.svg"></embed></figure>
 <p><a href="https://github.com/sha-since1999/github-readme-stats"><img src="https://github-readme-stats.vercel.app/api?username=sha-since1999" alt="Rohit's github stats"></a></p>
 <p><a href="https://github.com/anuraghazra/github-readme-stats"><img src="https://github-readme-stats.vercel.app/api/top-langs/?username=sha-since1999&amp;layout=compact" alt="Top Langs"></a></p>
-<img src="https://github.com/sha-since1999/sha-since1999/blob/master/codeStats.svg" alt="My Coding Activity"/>
 <hr>
 <a href="https://github.com/sha-since1999/CompitativeCodingPractices/
 ">
